slide/src/test/ui/error/pattern/const_pat_in_expr.slide
===in
1 + #const
===in

~~~stdout
~~~stdout

~~~stderr
error[P0004]: Patterns cannot be used in an expression
  |
1 | 1 + #const 
  |     ^^^^^^ unexpected pattern
  |     ------ help: use a variable: `const`
  |
~~~stderr

~~~exitcode
1
~~~exitcode
